Fix logo alignment on mobile devices

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -203,7 +203,8 @@
       .left-container-items {
         gap: 40px !important;
         .logo {
-          margin-right: 100px;
+          margin-left: 20px;
+          margin-right: 20px;
           margin-top: 20px;
         }
 
